--- a/web_back/login.html
+++ b/web_back/login.html
@@ -29,7 +29,40 @@
             </form>
         </div>
 
-    </div> 
+    </div>
+    <script src="../web_back/js/jquery-1.12.4.min.js"></script>
+    <script>
+        $(function () {
+            $('.input_sub').on('click', function (e) {
+                e.preventDefault();
+                var userName = $('.input_txt').val().trim();
+                var password = $('.input_pass').val().trim();
+                if (userName == '' || password == '') {
+                    alert('账号或者密码为空');
+                    return;
+                }
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8000/admin/login',
+                    data: {
+                        user_name: userName,
+                        password: password,
+                    },
+                    success: function (backData) {
+                        if (backData.code == 200) {
+                            location.href = './index.html';
+                        } else {
+                            alert('账号或密码错误');
+                        }
+                    }
+                });
+            });
+
+
+
+        });
+
+    </script>
 
 </body>
 
