个人用户信息修改

--- a/web_back/index.html
+++ b/web_back/index.html
@@ -104,7 +104,36 @@
 
     </script>
     <script>
+        $(function(){
+            //退出登录
+            $('.icon-tuichu').on('click',function(e){
+                e.preventDefault();
+                $.post({
+                    url:'http://localhost:8000/admin/logout',
+                    success:function(backData){
+                        if(backData.code==200){
+                            location.href='./login.html';
+                        }
+                    }
 
+                });
+
+            })
+            
+            //获取登录用户的个人信息
+            $.ajax({
+                type:'get',
+                url:'http://localhost:8000/admin/getuser',
+                success:function(backData){
+                    if(backData.code==200){
+                        $('.user_info').children('span').html('欢迎&nbsp;&nbsp;'+backData.data.nickname);
+                        $('.user_info').children('img').attr('src',backData.data.user_pic);
+                        $('.user_center_link').children('img').attr('src',backData.data.user_pic);
+                    }
+                }
+            })
+
+        })
     
     </script>
 </body>
