--- a/web_back/login.html
+++ b/web_back/login.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <!-- 引入bootstrap的css文件 -->
+    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -30,7 +32,28 @@
         </div>
 
     </div>
+
+    <!-- 模态框 -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
     <script src="../web_back/js/jquery-1.12.4.min.js"></script>
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
     <script>
         $(function () {
             $('.input_sub').on('click', function (e) {
@@ -38,7 +61,11 @@
                 var userName = $('.input_txt').val().trim();
                 var password = $('.input_pass').val().trim();
                 if (userName == '' || password == '') {
-                    alert('账号或者密码为空');
+                    // alert('账号或者密码为空');
+                    $('.modal-body').text('账号或者密码为空');
+                    $('#myModal').modal({
+                        keyboard: true,
+                    })
                     return;
                 }
                 $.ajax({
@@ -52,7 +79,11 @@
                         if (backData.code == 200) {
                             location.href = './index.html';
                         } else {
-                            alert('账号或密码错误');
+                            // alert('账号或密码错误');
+                            $('.modal-body').text('账号或者密码错误!');
+                            $('#myModal').modal({
+                                keyboard: true //键盘上的 esc 键被按下时关闭模态框
+                            })
                         }
                     }
                 });
