--- a/web_back/article_list.html
+++ b/web_back/article_list.html
@@ -298,7 +298,7 @@
             <td class="text-center"> {{v.date}} </td>
             <td class="text-center">{{v.state}}</td>
             <td class="text-center">
-                <a href="article-edit.html?id={{v.id}}" class="btn btn-default btn-xs">编辑</a>
+                <a href="article_edit.html?id={{v.id}}" class="btn btn-default btn-xs">编辑</a>
                 <a href="#" data-id='{{v.id}}' class="btnbtn-danger btn-xs btn-delete">删除</a>
             </td>
         </tr>
