--- a/web_front/index.html
+++ b/web_front/index.html
@@ -220,6 +220,42 @@
         <p>CopyRight © 2019 深圳大事件信息技术股份有限公司   All Rights Reserved</p>
         <p>电话：0755-****888    粤ICP备*******8号</p>
     </div>
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="../web_back/js/template-web.js"></script>
+    <script id="art-list" type="text/html">
+        {{each data v}}
+        {{if $index==0}}
+            <li class="first">
+        {{else}}
+            <li>
+        {{/if}}
+                <a href="#"><img src="{{v.cover}}" alt=""></a>
+                <p>{{v.title}}</p>
+            </li>
+        {{/each}}
+    
+    </script>
+    <script>
+        $(function(){
+
+            //需求:一进入前台,显示5篇文章
+            $.get({
+                url:'http://localhost:8000/admin/search',
+                data:{
+                    page:1,
+                    perpage:5
+                },
+                success:function(res){
+                    if(res.code==200){
+                        var html=template('art-list',res);
+                        $('.focus_list').html(html);
+                    }
+                }
+            })
+
+        })
+    
+    </script>
 
 </body>
 
