--- a/web_front/article.html
+++ b/web_front/article.html
@@ -204,6 +204,28 @@
         <p>CopyRight © 2019 深圳大事件信息技术股份有限公司 All Rights Reserved</p>
         <p>电话：0755-****888 粤ICP备*******8号</p>
     </div>
+    <script src="./js/jquery-1.12.4.min.js" ></script>
+    <script src="../web_back/js/template-web.js"></script>
+    <script id="art-xq" type="text/html">
+        {{author}} 发布于 {{date}}&nbsp;&nbsp;&nbsp;分类:{{type}}&nbsp;&nbsp;&nbsp;阅读:({{read}})&nbsp;&nbsp;&nbsp;评论: ({{comment}})
+    </script>
+    <script>
+        $(function(){
+            var id=location.search.split('=')[1];
+            $.get({
+                url:'http://localhost:8000/admin/search',
+                data:{id:id},
+                success:function(res){
+                    $('.article_title').text(res.data.title);
+                    $('.article_con').html(res.data.content);
+                    var html=template('art-xq',res);
+                    $('.article_info').html(html);
+
+                }
+            });
+        })
+    
+    </script>
 
 </body>
 
